增加即是消费者又是提供者

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>dubbo-provider</module>
         <module>user-lib</module>
         <module>dubbo-consumer</module>
+        <module>dubbo-provider-consumer</module>
     </modules>
     <packaging>pom</packaging>
 
